# vsla

./: .clang-format  .gitignore  ARCHIVAL_SUMMARY.md  AUTOGRAD_MEMORY_ISSUE.md  BENCHMARK_REPORT.md  CITATION.cff  CMakeLists.txt  CMakeLists_extended_example.txt  CODE_OF_CONDUCT.md  CUDA_C23_MIGRATION.md  FINAL_GPU_PERFORMANCE_REPORT.md  GPU_IMPLEMENTATION.md  LICENSE  MANIFEST.in  PYTHON_QUICKSTART.md  README.md  REPO_STRUCTURE.md  RESEARCH_LESSONS_LEARNED.md  SECURITY.md  STATUS.md  VALIDATION_SUMMARY.md  benchmark.sh  cibuildwheel.toml  debug_io_test  pyvenv.cfg  review-task.md  review.md  setup.py  simple_test  status-cuda.md  test_core_only  test_final  test_gpu_basic.c  test_simple  validate_benchmark
archive/: PERFORMANCE_REPORT.md  code-review.md  test_matmul_conv.c  test_optimization_dispatch.c  valgrind_output.txt
bench/: CMakeLists.txt  ENHANCED_BENCHMARK_SUMMARY.md  README.md  UNIFIED_BENCHMARKING.md  comprehensive_gpu_benchmark.py  run_benchmark.py  run_enhanced_benchmarks.py  run_full_benchmark.py
bench/bench/reports/: vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140350.json  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140350.md  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140358.json  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140358.md  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140430.json  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140430.md  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140447.json  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140447.md
bench/competitors/: cublas_benchmark.c  cufft_benchmark.c  cupy_benchmark.py
bench/reports/: comprehensive_results.json  performance_report.md  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140104.json  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140104.md  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140525.json  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_140525.md  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_141218.json  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_141218.md  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_142444.json  vsla_benchmark_13thGeni9-13900HX_RTX4060GPU_15GB_20250716_142444.md  vsla_benchmark_AMDRyzen99950X3D16-CoreProcessor_RTX5090_46GB_20250717_172454.json  vsla_benchmark_AMDRyzen99950X3D16-CoreProcessor_RTX5090_46GB_20250717_172454.md  vsla_benchmark_AMDRyzen99950X3D16-CoreProcessor_RTX5090_46GB_20250717_172645.json  vsla_benchmark_AMDRyzen99950X3D16-CoreProcessor_RTX5090_46GB_20250717_172645.md
bench/results/: latest
bench/results/2025-07-16_13-28-52/: config.json  summary.json
bench/results/2025-07-16_13-29-07/: bench_convolution_1752697747.json  config.json  summary.json
bench/results/gpu_comparison/: benchmark_results.json
bench/scripts/: compare_benchmarks.py
bench/src/: bench_comparison.c  bench_comprehensive_comparison.c  bench_convolution.c  bench_fair_comparison.c  bench_fft_convolution.c  bench_kronecker.c  bench_vector_add.c  benchmark_utils.c  benchmark_utils.h  comprehensive_benchmark.c  cpu_benchmark.c  enhanced_benchmark.c  gpu_head_to_head.c  intelligent_benchmark.c  minimal_benchmark.c  new_benchmark.c  quick_benchmark.c
benchmarks/: BENCHMARK_PLAN.md  CMakeLists.txt  bench_broadcasting.c  bench_comprehensive_comparison.c  bench_deep_learning_workloads.c  bench_kronecker.c  bench_multidimensional_operations.c  bench_optimization_validation.c  bench_paper_comprehensive.c  bench_real_operations.c  bench_sensor_fusion.c  bench_sparse.c  bench_stacking_operations.c  bench_unified_comprehensive.c  bench_universal_comprehensive.c  bench_variable_tensors.c  bench_vector_add_deprecated.c  bench_vector_add_large.c  competitor_backends.h  run_paper_benchmarks.sh  test_matmul_hang  test_matmul_hang.c
benchmarks/archived_simulated_benchmarks/: bench_cache_analysis.c  bench_deep_learning_extended.c  bench_multidim_shapes.c  bench_paper_comprehensive.c  bench_pyramid_stacking.c  bench_structural_sparsity.c  bench_window_stacking.c  competitor_backends.c  vsla_benchmark_suite.c  vsla_comprehensive_benchmark.c
docs/: 1B_TRANSFORMER_PLAN.md  ADDING_NEW_BACKENDS.md  API_CLEANUP_COMPLETE.md  API_CLEANUP_SUMMARY.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  BENCHMARK_USAGE.md  CMAKE_EVOLUTION.md  CODE_REVIEW_RESPONSE.md  CORE_FEATURES.md  DEVELOPMENT_INTERFACES.md  HONEST_PERFORMANCE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  MODERN_UNIFIED_ARCHITECTURE.md  Makefile  README_ACM.md  VALIDATION.md  (+10 more)
examples/: CMakeLists.txt  Makefile  basic_usage  basic_usage.c  gpu_demo.c  neural_network_cnn.c  polynomial_algebra.c  signal_processing_radar.c  tensor_stacking.c
libvsla/: API_REFERENCE.md  CMakeLists.txt  README.md  STATUS.md
libvsla/docs/: README.md  vsla_paper.out  vsla_paper.tex
libvsla/examples/: Makefile
libvsla/include/vsla/: vsla.h  vsla_autograd.h  vsla_conv.h  vsla_core.h  vsla_ops.h  vsla_tensor.h
libvsla/src/: vsla_autograd.c  vsla_core.c  vsla_kron.c  vsla_ops.c  vsla_utils.c
libvsla/tests/: test_autograd.c  test_conv.c  test_framework.c  test_io.c  test_ops.c
tests/: CMakeLists.txt  cuda_add_test.c  simple_test.c  test_arithmetic_unified.c  test_autograd.c  test_backend.c  test_clean_architecture.c  test_conv_kron.c  test_core.c  test_core_only.c  test_fft_convolution.c  test_framework.c  test_framework.h  test_gpu.c  test_gpu_minimal  test_gpu_tensor  test_gpu_tensor_data.c  test_gpu_vs_cpu_benchmark  test_kron.c  test_main.c  test_main_unified.c  test_ops.c  test_simple.c  test_stacking_comprehensive.c  test_tensor.c  test_tensor_details  test_unified_backend.c  test_unified_framework.c  test_unified_framework.h  test_utils.c  test_vsla_spec_validation.c  validate_benchmark.c
tests/archive/: test_autograd.c  test_conv.c  test_gpu.c  test_gpu_minimal.c  test_gpu_tensor.c  test_gpu_vs_cpu_benchmark.c  test_io.c  test_kron.c  test_main.c  test_ops.c  test_simple.c  test_tensor.c  test_tensor_details.c  test_unified_api.c  test_utils.c
(+259 files in other folders)
